fix:gitignore에 api 키 추가

--- a/.gitignore
+++ b/.gitignore
@@ -772,3 +772,5 @@ FodyWeavers.xsd
 # Additional files built by Visual Studio
 
 # End of https://www.toptal.com/developers/gitignore/api/python,django,visualstudio,pycharm
+
+secrets.json
