--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,7 @@ Django==4.2.3
 djangorestframework==3.14.0
 drf-yasg==1.21.6
 inflection==0.5.1
-Markdown==3.4.3
+mysqlclient==2.2.0
 packaging==23.1
 pytz==2023.3
 PyYAML==6.0
