--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,18 +2,17 @@ version: "3"
 services:
 
   mysql:
-    image: mysql
+    image: mysql:5.7
     env_file:
       - ./.env
-    command: --lower_case_table_names=1
-    container_name: ainterview_db # 컨테이너 이름 설정
+    container_name: ainterview_db
     ports:
       - "3306:3306"
     environment:
-      - MYSQL_ROOT_PASSWORD=${MYSQL_ROOT_PASSWORD}
-      - MYSQL_DATABASE=${MYSQL_NAME}
-      - MYSQL_USER=${MYSQL_USER} # db가 생성될 때 유저도 같이 생성
-      - MYSQL_PASSWORD=${MYSQL_PASSWORD}
+      MYSQL_DATABASE: ${MYSQL_NAME}
+      MYSQL_PASSWORD: ${MYSQL_PASSWORD}
+      MYSQL_USER: ${MYSQL_USER}
+      MYSQL_ROOT_PASSWORD: ${MYSQL_ROOT_PASSWORD}
     # 가상 네트워크 연결
     networks:
       - ai_net
@@ -34,6 +33,8 @@ services:
     ports:
       - 8000:8000
     # 가상 네트워크 연결
+    links:
+      - mysql:mysql
     networks:
       - ai_net
     depends_on:
